# WorldOfXeen

./: .gitIgnore  CMakeLists.txt  README.md  porting.md
Tools/: README.md  combined_mappings.json  dark_cc_mappings.json  filename_mappings.json  intro_cc_mappings.json  requirements.txt  xeen_bg_convert.py  xeen_cc_mappings.json  xeen_convert_batch.py  xeen_filename_mapper.py  xeen_pack_assets.py  xeen_pal_convert.py  xeen_spr_convert.py  xeencc_unpack.py
data/: .gitattributes  DARK.CC  DARK.CUR  INTRO.CC  XEEN.CC  XEEN.CFG  XEEN.CUR
include/: game.h
src/: main.c
